# cache-simulator

./: CMakeLists.txt  README.md
src/: cache_level.cpp  cache_level.h  cache_line.h  cache_set.cpp  cache_set.h  cli.cpp  cli.h  compare.cpp  compare.h  config.cpp  config.h  main.cpp  memory_hierarchy.cpp  memory_hierarchy.h  policies.cpp  policies.h  report.cpp  report.h  stats.cpp  stats.h  sweep.cpp  sweep.h  trace_loader.cpp  trace_loader.h
tests/: test_analysis.cpp  test_cache_level.cpp  test_cli_report.cpp  test_edge_cases.cpp  test_framework.h  test_hierarchy.cpp  test_main.cpp  test_policies.cpp  test_trace.cpp
traces/: .gitkeep  matrix_multiply.trace  sample.trace
